--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,18 @@
 .youtubeVideos{
   margin-bottom: 2rem;
 }
+
+/* * {
+  background: #000 !important;
+  color: #0f0 !important;
+  outline: solid #f00 1px !important;
+} */
+
+header {
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  height: 60px;
+  width: 100%;
+  margin: 0% auto;
+}
