changed parent div and child div dimensions to display data w/o conflict

--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -9,8 +9,14 @@
 
 .carouselParent
 {
-    height: 200px;
+    height: 700px;
     margin-bottom: 10%;
+}
+
+.imgSlider
+{
+    height: 700px;
+    width: 100%;
 }
 
 .metricsCard
