--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -19,16 +19,58 @@
     width: 100%;
 }
 
-.metricsCard
+.bmiInfo, .calorieInfo, .bodyFatInfo
 {
-    background-color: var(--backgroundColor);
-    color: var(--secondaryTextColor);
+    margin-bottom: 10%;
+    padding: 5%;
 }
 
-.BMICardinHome, .FatCardinHome, .CaloriesCardinHome
+.metricsCardContainer
+{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.metricsCard
+{
+    display: flex;
+    justify-content: space-around;
+    background-color: var(--metricsCard);
+    color: var(--secondaryTextColor);
+    width: 15rem;
+    height: 20vh;
+    text-align: center;
+    border: 5px solid var(--backgroundColor);
+}
+
+
+
+.metricInfoHeaderContainer
+{
+    margin-left: 10%;
+}
+
+.metricInfoHeader
 {
     background-color: var(--metricsCard);
     color: var(--secondaryTextColor);
+    width: 15%;
+    border-radius: 10px;
+    border: 1.5px solid var(--backgroundColor);
     text-align: center;
-    
+}
+
+.bmiInfoDescription, .caloriesInfoDescription, .bodyFatInfoDescription
+{
+    display: flex;
+    color: var(--textColor);
+    background-color: var(--backgroundColor);
+    margin-left: 10%;
+    height: fit-content;
+    width: 70%;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    flex-wrap: wrap;
+    text-align: justify;
 }
