fitness cards edited

--- a/src/App.css
+++ b/src/App.css
@@ -116,3 +116,13 @@ header {
   color: black !important;
   align-self: center;
 }
+
+/* .fullheight{
+  height: 100vh;
+  margin-bottom: -10%;
+} */
+
+/* .fullheight-loader{
+  height: fit-content;
+} */
+
