--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -17,3 +17,13 @@
     border-color: transparent !important;
     background-color: rgba(255, 255, 255, 0.251) !important;
   }
+
+  body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  main {
+    flex: 1;
+  }
