--- a/src/components/loader/loader.css
+++ b/src/components/loader/loader.css
@@ -1,11 +1,11 @@
 .loader-container {
     background:
-    #142738;
+    none;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 120%;
     z-index: 9999;
     display: flex;
     align-items: center;
